Fixed a minor bug that overlapped the nav links and the content from .content in Chrome on Windows

--- a/modules/extra/webcpanel/templates/default/style.css
+++ b/modules/extra/webcpanel/templates/default/style.css
@@ -68,6 +68,7 @@ body {
 
 .content {
 	left:220px;
+	padding-top:20px;	
 	top:50px;
 	position:absolute;
 }
